assets/style/style.css
body {
  font-family: 'Fjalla One', sans-serif;
  background: url("https://s3.favim.com/orig/44/drink-glass-love-wine-Favim.com-371290.gif") no-repeat center fixed;
  background-size: cover;
  color: white;
  margin-top: 4%;
}

.nav-wrapper {
  background: #5b0b0b !important;
}


#autocomplete-input {
  background-color: white;
  color: black;
  border-radius: 5px;
  border-bottom: 1px solid #8f8023 !important;
  -webkit-box-shadow: 0 1px 0 0 #8f8023 !important;
  box-shadow: 0 1px 0 0 #8f8023 !important;
}

.active {
  color: #5b0b0b !important;
}

.btn {
  background-color: #8f8023 !important;
  border-radius: 5px !important;
}

.preText {
  font-size: 11px !important;
}

#image {
  text-align: center !important;
}

